--- a/MonkeyHubApp/MonkeyHubApp/MainPage.xaml
+++ b/MonkeyHubApp/MonkeyHubApp/MainPage.xaml
@@ -9,7 +9,13 @@
     <StackLayout>
         <Entry Text="{Binding SearchTerm}"/>
         <Button Text="Pesquisar" Command="{Binding SearchCommand}" />
-        <ListView ItemsSource="{Binding Resultados}"/>
+        <ListView ItemsSource="{Binding Resultados}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Name}" Detail="{Binding Description}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackLayout>
 	
 
