--- a/MonkeyHubApp/MonkeyHubApp/MainPage.xaml
+++ b/MonkeyHubApp/MonkeyHubApp/MainPage.xaml
@@ -1,22 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MonkeyHubApp"
-             x:Class="MonkeyHubApp.MainPage">
+<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="MonkeyHubApp.MainPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="About" Command="{Binding AboutCommand}"/>
+        <ToolbarItem Text="Buscar" Command="{Binding SearchCommand}"/>
+    </ContentPage.ToolbarItems>
+    <ListView 
+        HasUnevenRows="True"
+        ItemsSource="{Binding Tags}" 
+		ItemSelected="ListView_OnItemSelected">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <StackLayout Padding="20, 30" Orientation="Vertical">
+						<Label Text="{Binding Name}"
+							   FontSize="Large"                   
+                               TextColor="#FF5525"/>
 
-    <!--onetosource = da view pra view model apenas-->
-    <!--stringformat-->
-    <StackLayout>
-        <Entry Text="{Binding SearchTerm}"/>
-        <Button Text="Pesquisar" Command="{Binding SearchCommand}" />
-        <ListView ItemsSource="{Binding Resultados}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Text="{Binding Name}" Detail="{Binding Description}"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackLayout>
-	
-
+						<Label Text="{Binding Description}"
+							    FontSize="Small" />
+                    </StackLayout>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
